[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = topobank

[options]
include_package_data = true
packages = find:
install_requires =
    # Version discovery
    setuptools_scm

    python-slugify  # https://github.com/un33k/python-slugify
    argon2-cffi  # https://github.com/hynek/argon2_cffi
    whitenoise>=5.3, <6  # https://github.com/evansd/whitenoise
    psycopg2-binary>=2.8, <2.9  # https://github.com/psycopg/psycopg2

    # Django
    django==3.2.18    #  does this work with pyup?  # https://www.djangoproject.com/
    django-environ  # https://github.com/joke2k/django-environ
    django-model-utils  # https://github.com/jazzband/django-model-utils
    django-allauth  # https://github.com/pennersr/django-allauth
    django-crispy-forms  # https://github.com/django-crispy-forms/django-crispy-forms
    crispy-bootstrap4  # https://stackoverflow.com/questions/75495403/django-returns-templatedoesnotexist-when-using-crispy-forms
    django-tables2 # https://github.com/jieter/django-tables2

    # Redis for caching
    django-redis

    # Django REST Framework
    djangorestframework
    # https://github.com/encode/django-rest-framework
    # coreapi  # https://github.com/core-api/python-client
    # Serializer for content type framework
    rest-framework-generic-relations

    # Icons
    # django-fontawesome-5
    # git+http://git@github.com/mcrot/django-fontawesome-5.git@fix_circular_dependency_in_collectstatic_issue_14
    # see https://github.com/BenjjinF/django-fontawesome-5/issues/15

    # official plugin from fontawesome
    fontawesomefree==5.15.4

    # progressbar for upload
    # django-progressbarupload
    # git+http://github.com/IMTEK-Simulation/django-progressbarupload.git
    django-progressbarupload @ git+http://github.com/ContactEngineering/django-progressbarupload.git
    # we use a forked version, because so far there is no published release
    # which works with Django 3.x

    # filtering search results
    django-filter

    # tagging support
    django-tagulous>=1.3.0, <2.0

    # statistics
    # django-statsy  # cannot be used currently because of fixed version in requirements
    django-trackstats

    # parsing dates
    python-dateutil

    # faster collect static
    Collectfast

    #
    # Storage
    #
    boto3 # S3
    django-storages

    # Permissions on object level
    django-guardian>=2.4.0, <3

    # Endpoint status
    django-watchman

    # Celery
    # django-kombu # is this still needed? See https://pypi.org/project/django-kombu/
    celery[redis]>=5.2.3, <6.0
    # with memcached we've had several problems within a Docker swarm stack
    # pylibmc seems to cause memcache problems: see GH 737
    # librabbitmq>=2.0
    # problems while compiling librabbitmq

    # Flower (monitoring for celery) is currently not used because of dependency and security problems
    # flower==1.0.0

    # tornado>=4.2.0, <6.0.0

    # progress bars for celery tasks, served by Django
    celery-progress

    # Sanitize user inputs (removing malicious content)
    bleach>=3.3.0

    # Surface topography I/O and analysis
    SurfaceTopography==1.6.1
    ContactMechanics>=1.1.1  # FIXME: This is needed for just IncompatibleFormulationError

    # plotting
    bokeh==3.0.3
    # links to CSS+JS in HTML files must have exactly this version!

    # pandas is currently needed for downloading xlsx files from analyses
    pandas

    # xarray is used to write analysis data to netcdf files
    xarray
    netcdf4
    h5netcdf

    # form wizard for defining a topography in several steps
    django-formtools>=2.2

    # notifications
    django-notifications-hq>=1.7.0

    # multiple select widget
    django-select2

    # openpyxl
    openpyxl

    # Unit conversion
    pint

    # terms and conditions
    django-termsandconditions>=2.0.8

    # markdown conversion for terms & conditions and for docstrings in readers
    markdown2>=2.4.0
    # Version 2.3.8 has a security issue (CVE-2020-11888)
    # Version 2.3.9 has a security issue (CVE-2021-26813)

    urllib3>=1.26.5
    # Upgrade because of CVE-2021-33503

    # for syntax highlighting for docstrings of readers
    pygments>=2.7.4

    # datepicker
    django-bootstrap-datepicker-plus>=4.0

    # fix muspectre version because of a bug/incompatibility in later versions
    # git+https://gitlab.com/muspectre/muspectre.git@654a508babf97564c3e3144ca11686431fe45c39#egg=mufft

    # for publications
    short_url
    django-fullurl
    datacite

    # some other constraints due to security concerns
    lxml>=4.9.1
    jinja2>=2.11.3
    # because of CVE-2020-28493

    cryptography>=39.0.1
    # https://www.openssl.org/news/secadv/20221213.txt

    Pillow>=9.0.1
    # because of several CVEs

    PyYAML>=5.4
    # CVE-2020-14343

    sqlparse>=0.4.2
    # CVE-2021-32839

    pyjwt>=2.4.0
    #  https://github.com/ContactEngineering/TopoBank/security/dependabot/61

    numpy==1.23.5
    # incomplete string comparison in the numpy.core component in NumPy1.9.x
    # with v 1.24 there is currently a problem: https://github.com/ContactEngineering/SurfaceTopography/issues/266

    greenlet
    gevent
    gunicorn[gevent]>=20.1.0  # https://github.com/benoitc/gunicorn
    # gunicorn[eventlet]>=20.0.4
    #
    # Got problems with eventlet, see issue #415

    # because of problem with AttributeError for 'X509_V_FLAG_CB_ISSUER_CHECK'
    pyopenssl>=23.0.0

    # Django
    # ------------------------------------------------------------------------------
    # django-storages[boto3]==1.6.6  # https://github.com/jschneier/django-storages
    # django-anymail[mailgun]==3.0  # https://github.com/anymail/django-anymail

    # django-storages[boto3]  # https://github.com/jschneier/django-storages

#[options.packages.find]
#where = topobank
#include = topobank*
## only find packages in topobank package

[options.extras_require]
dev =
    Werkzeug
    # https://github.com/pallets/werkzeug
    ipdb
    # https://github.com/gotcha/ipdb
    # Not version 2.9 because of this
    # https://stackoverflow.com/questions/68024060/assertionerror-database-connection-isnt-set-to-utc

    # Documentation
    # ------------------------------------------------------------------------------
    Sphinx<6.0.0
    # https://github.com/sphinx-doc/sphinx
    sphinx_rtd_theme

    # Testing
    # ------------------------------------------------------------------------------
    pytest
    pytest-sugar

    # Because of CVE-2020-29651
    py>=1.10.0

    # Code quality
    # ------------------------------------------------------------------------------
    flake8
    coverage

    # Django
    # ------------------------------------------------------------------------------
    factory-boy
    # https://github.com/FactoryBoy/factory_boy
    django-test-plus
    # https://github.com/revsys/django-test-plus

    django-debug-toolbar
    # https://github.com/jazzband/django-debug-toolbar
    # Debug toolbar must be compatible with Django 3.2
    django-extensions>=3.2.0
    # https://github.com/django-extensions/django-extensions
    django-coverage-plugin
    # https://github.com/nedbat/django_coverage_plugin
    pytest-django>=4.4.0
    # https://github.com/pytest-dev/pytest-django
    pytest-mock
    pytest-cov

    # Dependency Handling
    # ------------------------------------------------------------------------------
    pip-tools>=6.8.0

    # Docker
    # ------------------------------------------------------------------------------
    # docker-compose
    # introduces dependency on a too old pyyaml version

    # Debugging
    # ------------------------------------------------------------------------------

    # just for interactive use to try things (not necessary)
    ipython>=7.31.1

    # additional for browser test
    pytest-splinter
    splinter[django]
    selenium
    pytest-selenium

    # for parsing html
    beautifulsoup4

    # for testing functions depending on date functions
    freezegun

    # for using storage items in test
    dj-inmemorystorage
